# understanding-cmake-library

./: .gitignore  CMakeLists.txt  Config.cmake.in  Config.h.in
.cmake/: All.cmake  PrepareForInstallation.cmake  PropagateLibrarySources.cmake
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-publish-release.yaml
include/my_library/: my_library.h
source/: CMakeLists.txt  my_library.cpp
